INTYG-4021: Tvingar vårdenhet att vara rätt för ersätta intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -124,6 +124,8 @@
                   class="btn btn-info"
                   ng-if="showErsattButton()"
                   ng-click="ersatt(viewState.intygModel)"
+                  wc-check-vardenhet
+                  vardenhet="{{viewState.enhetsId}}"
                   uib-popover="{{ersattBtnTooltipText}}"
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
