--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/patient-address-updater.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/patient-address-updater.formly.html
@@ -3,6 +3,6 @@
     <label class="form-control-label"></label>
   </div>
   <div class="col-md-{{12 - to.labelColSize}}">
-    <wc-utkast-patient-address-updater patient-model="model.grundData.patient" form="form"></wc-utkast-patient-address-updater>
+    <wc-utkast-patient-address-updater viewState="model" form="form"></wc-utkast-patient-address-updater>
   </div>
 </div>
