--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -26,6 +26,7 @@
                        validations="formState.viewState.common.validation.messagesByField[options.key]"
                        warnings="formState.viewState.common.validation.warningMessagesByField[options.key]"
                        kompletteringar="hasKompletteringar()">
+
     <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in to.fields">
       <div class="row">
         <div class="clearfix">
@@ -89,8 +90,7 @@
     </div>
 
     <div>
-      <wc-field-validation field-type="sjukskrivning_period"
-                           validations="overlapValidations">
+      <wc-field-validation field-type="sjukskrivning_period" validations="overlapValidations">
       </wc-field-validation>
     </div>
 
