--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fkList/fkList.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/fkList/fkList.directive.html
@@ -5,7 +5,10 @@
     <ul>
       <li ng-repeat="value in values">
         <span ng-attr-id="{{value.modelProp | uvDomIdFilter}}" message key="{{value.key}}"></span>
-        <div ng-attr-id="{{value.modelProp + '-text' | uvDomIdFilter}}" data-ng-if="value.text" class="multiline">{{::value.text}}</div>
+        <span data-ng-if="value.text"> - </span>
+        <span ng-attr-id="{{value.modelProp + '-text' | uvDomIdFilter}}" data-ng-if="value.text" class="multiline">{{::value.text}}</span>
       </li>
     </ul>
+
+  <uv-no-value ng-attr-id="{{config.noValueId}}" ng-if="!hasValue()"></uv-no-value>
 </div>
